OutServices started - Need to fix separator wrap.

--- a/vite-project/src/components/Navigation/NavigationBar.css
+++ b/vite-project/src/components/Navigation/NavigationBar.css
@@ -19,7 +19,7 @@
 
 .p__muli-active {
     font-family: var(--font-base);
-    color: var(--color-black);
+    color: var(--color-grey);
     font-weight: 300;
     letter-spacing: 0.04em;
     font-feature-settings: 'tnum' on, 'lnum' on;
