--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -4,8 +4,8 @@
     --font-base: 'Mulish', serif;
     
     --color-black: #0C0C0C;
-    --color-grey: #AAAAAA;
     --color-white: #FFFFFF;
+    --color-grey: #7D7987;
   }
   
   * {
